# orano-keihi

./: .gitignore  .pnpmrc  CODESIGN_ISSUE.md  README.md  biome.json  deno.json  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  test_migration_commands.js  vite.config.js
src-tauri/: .env.example  Cargo.toml  build.rs  entitlements.plist  tauri.conf.json  tauri.conf.production.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: expense_commands.rs  migration_commands.rs  mod.rs  receipt_commands.rs  security_commands.rs  subscription_commands.rs
src-tauri/src/config/: environment.rs  initialization.rs  mod.rs
src-tauri/src/db/: connection.rs  expense_operations.rs  migrations.rs  mod.rs  subscription_operations.rs
src-tauri/src/features/: mod.rs
src-tauri/src/features/auth/: commands.rs  loopback.rs  middleware.rs  mod.rs  models.rs  repository.rs  service.rs  session.rs
src-tauri/src/features/expenses/: commands.rs  mod.rs  models.rs  repository.rs
src-tauri/src/features/migrations/: batch_processor.rs  batch_processor_test.rs  commands.rs  commands_test.rs  database_updater.rs  error_handler.rs  error_scenario_tests.rs  integration_tests.rs  logging.rs  mod.rs  r2_migration_commands.rs  r2_migration_commands_test.rs  r2_migration_schema.sql  r2_migration_service.rs  r2_user_directory_migration.rs  (+1 more)
src-tauri/src/models/: expense.rs  mod.rs  subscription.rs
src-tauri/src/services/: cache_manager.rs  config.rs  mod.rs  r2_client.rs  security.rs
src-tauri/src/shared/: mod.rs
(+157 files in other folders)
