[package]
name = "subscription-memo"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "subscription_memo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
thiserror = "1.0"

# R2/S3互換API
aws-config = "1.0"
aws-sdk-s3 = "1.0"

# 非同期処理
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# UUID生成
uuid = { version = "1.0", features = ["v4"] }

# 環境変数読み込み
dotenv = "0.15"

[dev-dependencies]
tempfile = "3.8"
quickcheck = "1.0"
quickcheck_macros = "1.0"

